[관리자] https 설정 적용중

--- a/src/main/resources/templates/admin/fragments/header.html
+++ b/src/main/resources/templates/admin/fragments/header.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <header class="header" th:fragment="headerFragment">
-    <h1 class="header__logo">선천성 심장병 홈모니터링</h1>
+    <h1 class="header__logo">어사 관리자 페이지</h1>
     <span class="header__user">관리자</span>
     <nav class="header__nav js-dropdown">
         <button class="js-dropdown__btn"></button>
