--- a/src/main/resources/templates/admin/fragments/config.html
+++ b/src/main/resources/templates/admin/fragments/config.html
@@ -16,19 +16,19 @@
         <meta property="og:site_name" content="어사">
         <meta property="og:description" content="어사">
         <meta property="og:locale" content="ko_KR">
-        <link rel="stylesheet" th:href="@{/assets/css/admin/main.css}">
-        <link rel="stylesheet" th:href="@{/assets/css/admin/banner.css}">
-        <link rel="stylesheet" th:href="@{/assets/css/admin/price.css}">
-        <link rel="stylesheet" th:href="@{/assets/css/chatting/roomdetail.css}">
-        <script defer th:src="@{/assets/js/admin/common.js}"></script>
-        <script defer th:src="@{/assets/js/admin/layout.js}"></script>
-        <script defer th:src="@{/assets/js/admin/event.js}"></script>
-        <script defer th:src="@{/assets/js/admin/modal.js}"></script>       
-        <script defer th:src="@{/assets/js/admin/companysHiddencamList.js}"></script>
-        <script defer th:src="@{/assets/js/admin/removeListItem02.js}"></script>
-        <script defer th:src="@{/assets/js/admin/noticemodal.js}"></script>
-        <script defer th:src="@{/assets/js/admin/banner.js}"></script>
-        <script defer th:src="@{/assets/js/admin/price.js}"></script>
+        <link rel="stylesheet" th:href="@{/assets/css/admin/main.css}" type="text/css">
+        <link rel="stylesheet" th:href="@{/assets/css/admin/banner.css}" type="text/css">
+        <link rel="stylesheet" th:href="@{/assets/css/admin/price.css}" type="text/css">
+        <link rel="stylesheet" th:href="@{/assets/css/chatting/roomdetail.css}" type="text/css">
+        <script type="application/javascript" defer th:src="@{/assets/js/admin/common.js}"></script>
+        <script type="application/javascript" defer th:src="@{/assets/js/admin/layout.js}"></script>
+        <script type="application/javascript" defer th:src="@{/assets/js/admin/event.js}"></script>
+        <script type="application/javascript" defer th:src="@{/assets/js/admin/modal.js}"></script>       
+        <script type="application/javascript" defer th:src="@{/assets/js/admin/companysHiddencamList.js}"></script>
+        <script type="application/javascript" defer th:src="@{/assets/js/admin/removeListItem02.js}"></script>
+        <script type="application/javascript" defer th:src="@{/assets/js/admin/noticemodal.js}"></script>
+        <script type="application/javascript" defer th:src="@{/assets/js/admin/banner.js}"></script>
+        <script type="application/javascript" defer th:src="@{/assets/js/admin/price.js}"></script>
     </head>
 </th:block>
 </html>
