[관리자] 상담전용회원(구 비회원) 관리 페이지 주석 해제

--- a/src/main/resources/templates/admin/fragments/aside.html
+++ b/src/main/resources/templates/admin/fragments/aside.html
@@ -8,7 +8,7 @@
                 <a href="#none" class="js-dropdown__btn" role="button" data-category="users">회원 관리</a>
                 <ul class="nav-sub js-dropdown__cont">
                     <li class=""><a th:href="@{/admin/manage/user/list}" data-category="list">회원 목록</a></li>
-                    <!-- <li class=""><a th:href="@{/admin/manage/user/temp/list}" data-category="temp">비회원 목록</a></li> -->
+                    <li class=""><a th:href="@{/admin/manage/user/temp/list}" data-category="temp">상담전용회원 목록</a></li>
                     <li class=""><a th:href="@{/admin/manage/user/terminate/list}" data-category="terminate">탈퇴 목록</a></li>
                     <li class=""><a th:href="@{/admin/manage/user/register}" data-category="register">회원 등록</a></li>
                 </ul>
